<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingInUp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-7dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="174dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="508dp"
        android:contentDescription="@string/todo2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        app:srcCompat="@drawable/_23" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="360dp"
        android:onClick="onClickAvatar"
        android:text="@string/avatar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="42dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="42dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:password="true"
        android:text="@string/name3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575"
        tools:ignore="Deprecated,LabelFor" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="42dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="42dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="42dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#FF0000"
        android:fadeScrollbars="true"
        android:onClick="onClickDone"
        android:text="@string/done"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>